<resources>
    <string name="app_name">SUVAT Solver</string>
    <string name="action_settings">Settings</string>

    <string name="intro_text">Complete the fields below and press calculate. Upto two empty fields are accepted.</string>
    <string name="velocity_label">Velocity</string>
    <string name="initial_label">Initial Velocity</string>
    <string name="distance_label">Distance</string>
    <string name="acceleration_label">Acceleration</string>
    <string name="time_label">Time</string>
    <string name="acceleration_text">Acceleration</string>

    <string name="ACCELERATION">ACCELERATION</string>
    <string name="DISTANCE">DISTANCE</string>
    <string name="INITAL_VELOCITY">INITIAL_VELOCITY</string>
    <string name="VELOCITY">VELOCITY</string>
    <string name="TIME">TIME</string>

    <string name="About_Activity">About</string>

</resources>
