<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/MainActivity">

    // Intro text
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/DarkRed"
        android:gravity="center"/>


    // Velocity text box
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/velocity_input"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:hint="@string/velocity_label" />

    // Initial velocity text box

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/intial_velocity_input"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/velocity_input"
        android:layout_alignStart="@+id/velocity_input"
        android:hint="@string/initial_label" />

    // Distance

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/distance_input"
        android:layout_below="@+id/intial_velocity_input"
        android:layout_alignStart="@+id/intial_velocity_input"
        android:hint="@string/distance_label" />

    // Acceleration

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/acceleration_input"
        android:layout_below="@+id/distance_input"
        android:layout_alignEnd="@+id/distance_input"
        android:hint="@string/acceleration_label" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/time_input"
        android:layout_below="@+id/acceleration_input"
        android:layout_centerHorizontal="true"
        android:hint="@string/time_label" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate"
        android:id="@+id/calculate_button"
        android:layout_below="@+id/time_input"
        android:layout_marginTop="35dp"
        android:layout_alignStart="@+id/time_input"
        android:layout_alignEnd="@+id/time_input" />


</RelativeLayout>
